# cowork

./: .env.example  .gitignore  .npmrc  AGENTS.md  AGENT_MISSION.md  CONTRIBUTING.md  README.md  eslint.config.js  logs.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-release.yml  build.yml  quality-gates.yml  release.yml
apps/chrome-extension/: background.js  content.js  manifest.json  package.json  popup.css  popup.html  popup.js
apps/desktop/: .env.example  index.html  package.json  playwright.config.ts  playwright.reliability.local.config.ts  postcss.config.js  tailwind.config.js  (+3 more)
apps/desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  sidecar.rs
apps/desktop/src-tauri/src/commands/: agent.rs  auth.rs  connectors.rs  credentials.rs  cron.rs  deep.rs  files.rs  heartbeat.rs  integrations.rs  keychain.rs  mod.rs  policy.rs  remote_access.rs  service.rs  skills.rs  subagent.rs  workflow.rs
docs/: BACKGROUND_SERVICE_INTERNAL_TASKS.md  BACKGROUND_SERVICE_MIGRATION_TASKS.md  CONNECTORS.md  DEVELOPMENT.md  GET_STARTED.md  INSTALLATION.md  REMOTE_MOBILE_ROADMAP.md  audit-2026-02-02.md
scripts/: convert-openclaw-skills.ts  ensure-dev-env.mjs  skills-healthcheck.mjs  update-skill-emojis.ts  validate-connectors.mjs  version-sync.mjs
souls/: bold.md  concise.md  conversational.md  friendly.md  mentor.md  professional.md  strategist.md
(+824 files in other folders)
